@startuml
skinparam monochrome true
skinparam ClassAttributeIconSize 0
!startsub default
class SwitchTabEventProducer {
    + <<override>> Notify(eventJson:System.Text.Json.JsonElement) : void
}
abstract class "WebBrowserEventProducer<T>" {
}
enum "EventLabel"
!endsub
"WebBrowserEventProducer<T>" "<SwitchTabEvent>" <|-- SwitchTabEventProducer
SwitchTabEventProducer --> "HandledEventLabel" EventLabel
@enduml
